sum up of index.html, index.css and the image file

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
      
   <div class="main">
     <div class="background">
-      <img src="image/header.png" alt="Snow" style="width:100%;max-width:350px">
-<h1>Hey there.I'm Blessing.</h1>
-<h2>I'm a Software Developer</h2>
-<p> I can help you build a product,feature or website. Look through some of my work an
-  experience! If you like what you see and have a project you need coded, don't
-  hestiate to contact me.
-</p>
+      <img class="header"src="image/header.png" alt="wallpaper">
+       <h1> Hey there.I'm Blessing.</h1>
+          <h2>I'm a Software Developer</h2>
+              <p> I can help you build a product,feature or website. Look through some of my work an
+                     experience! If you like what you see and have a project you need coded, don't
+                       hestiate to contact me.
+                          </p>
  <div class="icons">
             <i class="fa fa-twitter"></i>
              <i class="fa fa-github"></i>
