--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Simulate a smartphone / tablet -->
-<div class="mobile-container">
-    <!-- Top Navigation Menu -->
-
-  <div class="navbar">
-    <a href="#home" class="active">Welcome</a>
-    <div class="dropdown">
-      <button class="dropbtn"> 
-        <i class="fa fa-bars"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="#">Portfolio</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        </div>
-      </div>
-      </div>
-    </div> 
-     
-  <div class="main">
-    <div class="background">
-      <img class="header"src="image/header.png" alt="wallpaper">
-       <h1> Hey there.I'm Blessing.</h1>
-          <h2>I'm a Software Developer</h2>
-              <p> I can help you build a product,feature or website. Look through some of my work an
-                     experience! If you like what you see and have a project you need coded, don't
-                       hestiate to contact me.
-                          </p>
- <div class="icons">
-            <i class="fa fa-twitter"></i>
-             <i class="fa fa-github"></i>
-           <i class="fa fa-linkedin"></i>
-            <i class="fa fa-"></i>
+    <div class="mobile-container">
+      <!-- Top Navigation Menu -->
+     <div class="navbar">
+        <a href="#home" class="active">Welcome</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            <i class="fa fa-bars"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Portfolio</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
           </div>
         </div>
       </div>
-      </body>
+    </div>
+     <div class="main">
+      <div class="background">
+        <img class="header" src="image/header.png" alt="wallpaper" />
+        <h1>Hey there.I'm Blessing.</h1>
+        <h2>I'm a Software Developer</h2>
+        <p>
+          I can help you build a product,feature or website. Look through some of my work an
+          experience! If you like what you see and have a project you need coded, don't hestiate to
+          contact me.
+        </p>
+        <div class="icons">
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-github"></i>
+          <i class="fa fa-linkedin"></i>
+          <i class="fa fa-"></i>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
