--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio website</title>
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -18,7 +16,7 @@
         <a href="#home" class="active">Welcome</a>
         <div class="dropdown">
           <button class="dropbtn">
-            <i class="fa fa-bars"></i>
+           <i class="fa fa-bars"></i>
           </button>
           <div class="dropdown-content">
             <a href="#">Portfolio</a>
@@ -31,18 +29,19 @@
     <div class="main">
       <div class="background">
         <img class="header" src="image/header.png" alt="wallpaper" />
-        <h1>Hey there.I'm Blessing.</h1>
-        <h2>I'm a Software Developer</h2>
+        <h1>Hey there.I'm Blessing</h1>
+        <h2>I'm a software developer</h2>
         <p>
-          I can help you build a product,feature or website. Look through some of my work an
+          I can help you build a product,<br>feature or website. Look through some of my work an
           experience! If you like what you see and have a project you need coded, don't hestiate to
           contact me.
         </p>
         <div class="icons">
           <i class="fa fa-twitter"></i>
-          <i class="fa fa-github"></i>
-          <i class="fa fa-linkedin"></i>
-          <i class="fa fa-"></i>
+          <a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a>
+          <a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a>
+          <a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a>
         </div>
       </div>
     </div>
