updating the index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio website</title>
     <link
-      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -16,7 +18,7 @@
         <a href="#home" class="active">Welcome</a>
         <div class="dropdown">
           <button class="dropbtn">
-           <i class="fa fa-bars"></i>
+            <i class="fa fa-bars"></i>
           </button>
           <div class="dropdown-content">
             <a href="#">Portfolio</a>
@@ -32,7 +34,7 @@
         <h1>Hey there.I'm Blessing</h1>
         <h2>I'm a software developer</h2>
         <p>
-          I can help you build a product,<br>feature or website. Look through some of my work an
+          I can help you build a product,<br />feature or website. Look through some of my work an
           experience! If you like what you see and have a project you need coded, don't hestiate to
           contact me.
         </p>
