--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <!-- Simulate a smartphone / tablet -->
-    <div class="mobile-container">
+    
+    <nav class="mobile-container">
       <!-- Top Navigation Menu -->
-      <div class="navbar">
-        <a href="#home" class="active">Welcome</a>
-        <div class="dropdown">
+      <nav class="navbar">
+        <a href="#home" class="active navbar-links">Welcome</a>
+        <nav class="dropdown">
           <button class="dropbtn">
             <i class="fa fa-bars"></i>
           </button>
-          <div class="dropdown-content">
-            <a href="#">Portfolio</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="main">
+          <ul class="dropdown-content">
+            <ol><a href="#">Portfolio</a></ol>
+            <a href="#">About</a></ol>
+            <ol><a href="#">Contact</a></ol>
+            </ul>
+          </nav>
+          </nav>
+          </nav>
+          </nav>
+    <main>
       <div class="background">
         <img class="header" src="image/header.png" alt="wallpaper" />
         <h1>Hey there.I'm Blessing</h1>
         <h2>I'm a software developer</h2>
         <p>
-          I can help you build a product,<br />feature or website. Look through some of my work an
+          I can help you build a product,<span>feature or website. Look through some of my work an
           experience! If you like what you see and have a project you need coded, don't hestiate to
           contact me.
         </p>
-        <div class="icons">
-          <i class="fa fa-twitter"></i>
-          <a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a>
-          <a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a>
-          <a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a>
-        </div>
+       <ul class="icons">
+        <ol class="icons-link"><a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a></ol>
+          <ol class="icons-link"><a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a></ol>
+          <ol class="icons-link"><a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a></ol>
+          <ol class="icons-link"><a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a></ol>
+       </ul>
       </div>
     </div>
   </body>
