--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    
     <nav class="mobile-container">
       <!-- Top Navigation Menu -->
       <nav class="navbar">
@@ -39,8 +38,9 @@
           experience! If you like what you see and have a project you need coded, don't hestiate to
           contact me.
         </p>
-       <ul class="icons">
-        <ol class="icons-link"><a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a></ol>
+       <div class="wrapper">
+         <ul class="icons"></ul>
+          <ol class="icons-link"><a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a></ol>
           <ol class="icons-link"><a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a></ol>
           <ol class="icons-link"><a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a></ol>
           <ol class="icons-link"><a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a></ol>
