--- a/index.html
+++ b/index.html
@@ -11,41 +11,42 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav class="mobile-container">
+   <nav class="mobile-container">
       <!-- Top Navigation Menu -->
       <nav class="navbar">
         <a href="#home" class="active navbar-links">Welcome</a>
         <nav class="dropdown">
-          <button class="dropbtn">
+          <button-type class="dropbtn">
             <i class="fa fa-bars"></i>
-          </button>
-          <ul class="dropdown-content">
-            <ol><a href="#">Portfolio</a></ol>
-            <a href="#">About</a></ol>
-            <ol><a href="#">Contact</a></ol>
-            </ul>
-          </nav>
+          </button-type>>
+          <ol class="dropdown-content">
+            <li><a href="#">Portfolio</a></li>
+           <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            </ol>
           </nav>
           </nav>
           </nav>
     <main>
+      <div class="flex-container">
       <div class="background">
         <img class="header" src="image/header.png" alt="wallpaper" />
         <h1>Hey there.I'm Blessing</h1>
         <h2>I'm a software developer</h2>
         <p>
-          I can help you build a product,<span>feature or website. Look through some of my work an
+          I can help you build a product,feature or website. Look through some of my work an
           experience! If you like what you see and have a project you need coded, don't hestiate to
           contact me.
         </p>
-       <div class="wrapper">
-         <ul class="icons"></ul>
-          <ol class="icons-link"><a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a></ol>
-          <ol class="icons-link"><a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a></ol>
-          <ol class="icons-link"><a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a></ol>
-          <ol class="icons-link"><a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a></ol>
+         <ul class="icons">
+          <li class="icons-link"><a href="https://github.com/ibukun53/"><i class="fa fa-github"></i></a></li>
+          <li class="icons-link"><a href="https://www.linkedin.com/in/ibukun53/"><i class="fa fa-linkedin"></i></a></li>
+          <li class="icons-link"><a href="https://t.me/debbie1234"><i class="fa fa-telegram"></i></a></li>
+          <li class="icons-link"><a href="https://web.facebook.com/debby.blessing.1460"><i class="fa fa-facebook"></i></a></li>
        </ul>
       </div>
     </div>
+    </div>
+    </main>
   </body>
 </html>
