changing the li styling

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <nav class="dropdown">
           <button-type class="dropbtn">
             <i class="fa fa-bars"></i>
-          </button-type>>
-          <ol class="dropdown-content">
+          </button-type>
+          <ul class="dropdown-content">
             <li><a href="#">Portfolio</a></li>
            <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            </ol>
+          </ul>
           </nav>
           </nav>
           </nav>
