changed the anchor tag

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </nav>
     <main>
       <section class="intro">
-        <h1>Hey there.I'm Blessing</h1>
-        <h2>I'm a software developer</h2>
+        <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
+        <h2 class="subheading margin-left-right-auto">I'm a software developer</h2>
         <p class="summary margin-left-right-auto">
           I can help you build a product,feature or website. Look through some of my work an
           experience! If you like what you see and have a project you need coded, don't hestiate to
@@ -29,7 +29,7 @@
         <footer class="intro-section margin-left-right-auto">
           <ul class="socials-list">
             <li class="socials-lists-item">
-              <icon class="icon github">
+              <div class="icon github">
                 <a href="https://github.com/ibukun53/"
                   ><svg
                     class="size"
@@ -40,11 +40,10 @@
                     <path
                       d="M18.4019 7.46114C18.4019 6.32124 18.0359 5.25043 17.3372 4.31779C17.6033 3.41969 17.6699 2.27979 17.6033 0.967185C17.5701 0.414508 17.1375 0 16.6052 0C16.3057 0 13.7771 0.0345423 12.3131 1.38169C11.0488 1.1399 9.71794 1.1399 8.42034 1.38169C6.98966 0.0345423 4.46101 0 4.12829 0C3.59594 0 3.16341 0.414508 3.13014 0.967185C3.03032 2.27979 3.13014 3.41969 3.39631 4.31779C2.6976 5.28497 2.33162 6.35579 2.33162 7.46114C2.33162 9.8791 4.12829 12.0553 6.85657 13.0915C6.75675 13.2988 6.69021 13.5406 6.62367 13.7824C3.72903 13.4715 2.36489 10.7427 2.29834 10.639C2.06544 10.1209 1.46655 9.91364 0.967475 10.19C0.468399 10.4318 0.268769 11.0535 0.534942 11.5717C0.601486 11.7444 2.43143 15.4404 6.45731 15.8549V18.9637C6.45731 19.5509 6.88984 20 7.45546 20H13.278C13.8436 20 14.2762 19.5509 14.2762 18.9637V14.8532C14.2762 14.2314 14.1431 13.6442 13.9102 13.1261C16.6052 12.0553 18.4019 9.91364 18.4019 7.46114Z"
                       fill="#505F79"
-                    /></svg
-                ></a>
-              </icon>
+                    /></svg></a>
+              </div>
 
-              <icon class="icon whatsapp">
+              <div class="icon whatsapp">
                 <a href="https://wa.me/2347013729933">
                   <svg
                     class="whatsappsize"
@@ -58,8 +57,8 @@
                     />
                   </svg>
                 </a>
-              </icon>
-              <icon class="icon linked">
+              </div>
+              <div class="icon linked">
                 <a href="https://www.linkedin.com/in/ibukun53/"
                   ><svg
                     class="linkedsize"
@@ -80,8 +79,8 @@
                       fill="#505F79"
                     /></svg
                 ></a>
-              </icon>
-              <icon class="icon facebook">
+              </div>
+              <div class="icon facebook">
                 <a href="https://web.facebook.com/debby.blessing.1460">
                   <svg
                     class="facebooksize"
@@ -94,8 +93,8 @@
                       fill="#505F79"
                     /></svg
                 ></a>
-              </icon>
-              <icon class="icon telegram">
+              </div>
+              <div class="icon telegram">
                 <a href="https://t.me/debbie1234">
                   <svg
                     class="size"
@@ -109,7 +108,7 @@
                     />
                   </svg>
                 </a>
-              </icon>
+              </div>
             </li>
           </ul>
         </footer>
