implementing some tags

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
     </nav>
     <main>
-      <section  class="intro">
-          <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
-          <h2 class="subheading margin-left-right-auto">I'm a software developer</h2>
+      <section class="intro">
+        <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
+        <h2 class="subheading margin-left-right-auto">I'm a software developer</h2>
 
         <p class="summary margin-left-right-auto">
           I can help you build a product,feature or website. Look through some of my work an
@@ -29,11 +29,11 @@
 
         <footer class="intro-section margin-left-right-auto">
           <ul class="socials-list">
-            <li class="socials-lists-item">
+            <li class="socials-lists-item margin-left-right-auto">
               <div class="icon github">
                 <a href="https://github.com/ibukun53/"
                   ><svg
-                    class="size"
+                    class="githubsize"
                     viewBox="0 0 19 20"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
@@ -99,7 +99,7 @@
               <div class="icon telegram">
                 <a href="https://t.me/debbie1234">
                   <svg
-                    class="size"
+                    class="telegramsize"
                     fill="#000000"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 50 50"
