updating new contents

--- a/index.html
+++ b/index.html
@@ -116,5 +116,61 @@
         </footer>
       </section>
     </main>
+    <section class="works">
+     <div class="grid">
+        <div class="grid-item">
+          <div class="card">
+            <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+            <div class="card-content">
+              <h2 class="card-header">Multi-Post Stories Gain+Glory</h2>
+              <p class="card-tags">Ruby on rails</p>
+              <p class="card-tags">css</p>
+              <p class="card-tags">Javascript</p>
+              <p class="card-tags">html</p>
+              <button-type class="card-btn">See Projects</button-type>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="grid-item">
+          <div class="card">
+            <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+            <div class="card-content">
+              <h1 class="card-header">Multi-Post Stories Gain+Glory</h1>
+              <p class="card-tags">Ruby on rails</p>
+              <p class="card-tags">css</p>
+              <p class="card-tags">Javascript</p>
+              <p class="card-tags">html</p>
+              <button-type class="card-btn">See Projects</button-type>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid">
+        <div class="grid-item">
+          <div class="card">
+            <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+            <div class="card-content">
+              <h1 class="card-header">Multi-Post Stories Gain+Glory</h1>
+              <p class="card-tags">Ruby on rails</p>
+              <p class="card-tags">css</p>
+              <p class="card-tags">Javascript</p>
+              <p class="card-tags">html</p>
+              <button-type class="card-btn">See Projects</button-type>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <h1 class="about-header">About Me</h1>
+      <p class="about-text">
+        I can help you build a product,feature or website Look through some of my work and
+        experience! If you like what you see and have a project you need coded,dont hestiate to
+        contact me
+      </p>
+      <button-type class="about-btn">Get My Resume</button-type>
+    </section>
   </body>
 </html>
