--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
         </footer>
       </section>
     </main>
-    <section class="works">
+    <article class= "recent">
+      <h1 class="works-header"> My Recent Works</h1>
+       <span  class="line"></span>
+      <article class="works">
      <div class="grid">
         <div class="grid-item">
           <div class="card">
@@ -162,7 +165,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </article>
     <section class="about">
       <h1 class="about-header">About Me</h1>
       <p class="about-text">
@@ -171,6 +174,45 @@
         contact me
       </p>
       <button-type class="about-btn">Get My Resume</button-type>
+    <div class="flex-container">
+      <div class= "flex-box">
+        <ul class="attributes">
+          <li class="attribute-items">
+            <div class="attribute-title">
+              <img class="attribute-image" src="./image/language.svg">
+              <h2 class="about-text">Language</h2>
+              <p class="attribute-tags">Javascript</p>
+              <p class="attribute-tags">Ruby</p>
+              <p class="attribute-tags">Html</p>
+              <p class="attribute-tags">Css</p>
+            </div>
+          </li>
+          <li class="attribute-items">
+            <div class="attribute-title">
+              <img class="attribute-image" src="./image/framework.svg">
+              <h2 class="about-text">Framework</h2>
+              <p class="attribute-tags">Bootstrap</p>
+              <p class="attribute-tags">Ruby on rails</p>
+              <p class="attribute-tags">RSpec</p>
+              <p class="attribute-tags">Capybara</p>
+              <p class="attribute-tags">Selenium</p>
+            </div>
+          </li>
+          <li class="attribute-items">
+            <div class="attribute-title">
+              <img class="attribute-image" src="./image/skill.svg">
+              <h2 class="about-text">Skills</h2>
+              <p class="attribute-tags">Codekit</p>
+              <p class="attribute-tags">Github</p>
+              <p class="attribute-tags">Codepen</p>
+              <p class="attribute-tags">Gitlab</p>
+              <p class="attribute-tags">Terminal</p>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </div>
     </section>
   </body>
 </html>
