--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
           <ul class="attributes">
             <li class="attribute-items">
               <div class="attribute-title">
-                <img class="attribute-image" src="./image/language.svg"  alt="lang png"/>
-                <h3 class="about-text">Language</h2>
+                <img class="attribute-image" src="./image/language.svg" alt="lang" />
+                <h3 class="about-text">Language</h3>
                 <p class="attribute-tags">Javascript</p>
                 <p class="attribute-tags">Ruby</p>
                 <p class="attribute-tags">Html</p>
@@ -190,8 +190,8 @@
             </li>
             <li class="attribute-items">
               <div class="attribute-title">
-                <img class="attribute-image" src="./image/framework.svg" alt="framework png />
-                <h2 class="about-text">Framework</h2>
+                <img class="attribute-image" src="./image/framework.svg" alt="framework" />
+                <h3 class="about-text">Framework</h3>
                 <p class="attribute-tags">Bootstrap</p>
                 <p class="attribute-tags">Ruby on rails</p>
                 <p class="attribute-tags">RSpec</p>
@@ -201,8 +201,8 @@
             </li>
             <li class="attribute-items">
               <div class="attribute-title">
-                <img class="attribute-image" src="./image/skill.svg"alt="skill png />
-                <h2 class="about-text">Skills</h2>
+                <img class="attribute-image" src="./image/skill.svg" alt="skill" />
+                <h3 class="about-text">Skills</h3>
                 <p class="attribute-tags">Codekit</p>
                 <p class="attribute-tags">Github</p>
                 <p class="attribute-tags">Codepen</p>
