added other content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     /></svg
                 ></a>
               </div>
-
               <div class="icon whatsapp">
                 <a href="https://wa.me/2347013729933">
                   <svg
@@ -167,6 +166,7 @@
         </div>
       </article>
     </article>
+
     <section class="about">
       <h1 class="about-header">About Me</h1>
       <p class="about-text">
@@ -175,44 +175,60 @@
         contact me
       </p>
       <button-type class="about-btn">Get My Resume</button-type>
-      <div class="flex-container">
+      <div class="about2"></div>
+      <section class="flex-container">
         <div class="flex-box">
           <ul class="attributes">
             <li class="attribute-items">
-              <div class="attribute-title">
-                <img class="attribute-image" src="./image/language.svg" alt="lang" />
-                <h3 class="about-text">Language</h3>
-                <p class="attribute-tags">Javascript</p>
-                <p class="attribute-tags">Ruby</p>
-                <p class="attribute-tags">Html</p>
-                <p class="attribute-tags">Css</p>
-              </div>
+              <p class="attribute-ellip">
+                <img class="attribute-img" src="./image/language.svg" alt="lang" />
+              </p>
+
+              <h3 class="attribute-title">Language</h3>
+              <p class="attribute-tags">Javascript</p>
+              <p class="attribute-tags">Ruby</p>
+              <p class="attribute-tags">Html</p>
+              <p class="attribute-tags">Css</p>
             </li>
-            <li class="attribute-items">
-              <div class="attribute-title">
-                <img class="attribute-image" src="./image/framework.svg" alt="framework" />
-                <h3 class="about-text">Framework</h3>
+          </ul>
+        </div>
+        <div class="flex-container">
+          <div class="flex-box">
+            <ul class="attributes">
+              <li class="attribute-items">
+                <p class="attribute-ellip">
+                  <img class="attribute-img" src="./image/framework.svg" alt="framework" />
+                </p>
+
+                <h3 class="attribute-title">Framework</h3>
                 <p class="attribute-tags">Bootstrap</p>
                 <p class="attribute-tags">Ruby on rails</p>
                 <p class="attribute-tags">RSpec</p>
                 <p class="attribute-tags">Capybara</p>
                 <p class="attribute-tags">Selenium</p>
-              </div>
-            </li>
-            <li class="attribute-items">
-              <div class="attribute-title">
-                <img class="attribute-image" src="./image/skill.svg" alt="skill" />
-                <h3 class="about-text">Skills</h3>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex-container">
+          <div class="flex-box">
+            <ul class="attributes">
+              <li class="attribute-items">
+                <p class="attribute-ellip">
+                  <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+                </p>
+
+                <h3 class="attribute-title">Skills</h3>
                 <p class="attribute-tags">Codekit</p>
                 <p class="attribute-tags">Github</p>
                 <p class="attribute-tags">Codepen</p>
                 <p class="attribute-tags">Gitlab</p>
                 <p class="attribute-tags">Terminal</p>
-              </div>
-            </li>
-          </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
   </body>
 </html>
