--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </li>
           </ul>
         </div>
-        <div class="flex-container">
+        <section class="flex-container">
           <div class="flex-box">
             <ul class="attributes">
               <li class="attribute-items">
@@ -209,8 +209,8 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="flex-container">
+        </section>
+        <section class="flex-container">
           <div class="flex-box">
             <ul class="attributes">
               <li class="attribute-items">
@@ -227,7 +227,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </section>
       </section>
     </section>
   </body>
