--- a/index.html
+++ b/index.html
@@ -114,22 +114,36 @@
           </ul>
         </footer>
       </section>
-    </main>
     <article class="recent">
-      <h1 class="works-header">My Recent Works</h1>
+      <h2 class="works-header">My Recent Works</h2>
       <span class="line"></span>
       <article class="works">
         <div class="grid">
           <div class="grid-item">
             <div class="card">
+              <img class="card-img " src="./image/Screenshot.png" alt="screenshot" />
+              <ul class="card-content">
+                <p class="card-header">Multi-Post Stories Gain+Glory</p>
+                <li class="card-tags">Ruby on rails</li>
+                <li class="card-tags">css</li>
+                <li class="card-tags">Javascript</li>
+                <li class="card-tags">html</li>
+                <button class="card-btn">See Projects</button>
+              </div>
+            </div>
+          </div>
+        <div class="grid">
+          <div class="grid-item">
+            <div class="card">
               <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-              <div class="card-content">
-                <h2 class="card-header">Multi-Post Stories Gain+Glory</h2>
-                <p class="card-tags">Ruby on rails</p>
-                <p class="card-tags">css</p>
-                <p class="card-tags">Javascript</p>
-                <p class="card-tags">html</p>
-                <button-type class="card-btn">See Projects</button-type>
+              <ul class="card-content">
+                <p class="card-header">Multi-Post Stories Gain+Glory</p>
+                <li class="card-tags">Ruby on rails</li>
+                <li class="card-tags">css</li>
+                <li class="card-tags">Javascript</li>
+                <li class="card-tags">html</li>
+                <button class="card-btn">See Project</button>
+              </ul>
               </div>
             </div>
           </div>
@@ -138,32 +152,16 @@
           <div class="grid-item">
             <div class="card">
               <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-              <div class="card-content">
-                <h2 class="card-header">Multi-Post Stories Gain+Glory</h2>
-                <p class="card-tags">Ruby on rails</p>
-                <p class="card-tags">css</p>
-                <p class="card-tags">Javascript</p>
-                <p class="card-tags">html</p>
-                <button-type class="card-btn">See Projects</button-type>
-              </div>
+              <ul class="card-content">
+                <p class="card-header">Multi-Post Stories Gain+Glory</p>
+                <li class="card-tags">Ruby on rails</li>
+                <li class="card-tags">css</li>
+                <li class="card-tags">Javascript</li>
+                <li class="card-tags">html</li>
+                <button class="card-btn">See Projects</button>
+              </ul>
             </div>
           </div>
-        </div>
-        <div class="grid">
-          <div class="grid-item">
-            <div class="card">
-              <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-              <div class="card-content">
-                <h2 class="card-header">Multi-Post Stories Gain+Glory</h2>
-                <p class="card-tags">Ruby on rails</p>
-                <p class="card-tags">css</p>
-                <p class="card-tags">Javascript</p>
-                <p class="card-tags">html</p>
-                <button-type class="card-btn">See Projects</button-type>
-              </div>
-            </div>
-          </div>
-        </div>
       </article>
     </article>
 
@@ -177,58 +175,50 @@
       <button-type class="about-btn">Get My Resume</button-type>
       <div class="about2"></div>
       <section class="flex-container">
-        <div class="flex-box">
-          <ul class="attributes">
-            <li class="attribute-items">
+        <div class="flex-box margin-left-right-auto">
               <p class="attribute-ellip">
                 <img class="attribute-img" src="./image/language.svg" alt="lang" />
               </p>
 
-              <h3 class="attribute-title">Language</h3>
-              <p class="attribute-tags">Javascript</p>
-              <p class="attribute-tags">Ruby</p>
-              <p class="attribute-tags">Html</p>
-              <p class="attribute-tags">Css</p>
-            </li>
+              <ul class="attribute-title">Language</ul>
+              <li class="attribute-tags">Javascript</li>
+              <li class="attribute-tags">Ruby</li>
+              <li class="attribute-tags">Html</li>
+              <li class="attribute-tags">Css</li>
           </ul>
         </div>
         <section class="flex-container">
           <div class="flex-box">
-            <ul class="attributes">
-              <li class="attribute-items">
                 <p class="attribute-ellip">
                   <img class="attribute-img" src="./image/framework.svg" alt="framework" />
                 </p>
 
-                <h3 class="attribute-title">Framework</h3>
-                <p class="attribute-tags">Bootstrap</p>
-                <p class="attribute-tags">Ruby on rails</p>
-                <p class="attribute-tags">RSpec</p>
-                <p class="attribute-tags">Capybara</p>
-                <p class="attribute-tags">Selenium</p>
-              </li>
+                <ul class="attribute-title">Framework</ul>
+                <li class="attribute-tags">Bootstrap</li>
+                <li class="attribute-tags">Ruby on rails</li>
+                <li class="attribute-tags">RSpec</li>
+                <li class="attribute-tags">Capybara</li>
+                <li class="attribute-tags">Selenium</li>
             </ul>
           </div>
         </section>
         <section class="flex-container">
           <div class="flex-box">
-            <ul class="attributes">
-              <li class="attribute-items">
                 <p class="attribute-ellip">
                   <img class="attribute-img" src="./image/skill.svg" alt="skill" />
                 </p>
 
-                <h3 class="attribute-title">Skills</h3>
-                <p class="attribute-tags">Codekit</p>
-                <p class="attribute-tags">Github</p>
-                <p class="attribute-tags">Codepen</p>
-                <p class="attribute-tags">Gitlab</p>
-                <p class="attribute-tags">Terminal</p>
-              </li>
-            </ul>
+                <ul class="attribute-title">Skills</ul>
+                <li class="attribute-tags">Codekit</li>
+                <li class="attribute-tags">Github</li>
+                <li class="attribute-tags">Codepen</li>
+                <li class="attribute-tags">Gitlab</li>
+                <li class="attribute-tags">Terminal</li>
+             </ul>
           </div>
         </section>
       </section>
     </section>
+    </main>
   </body>
 </html>
