--- a/index.html
+++ b/index.html
@@ -114,111 +114,115 @@
           </ul>
         </footer>
       </section>
-    <article class="recent">
-      <h2 class="works-header">My Recent Works</h2>
-      <span class="line"></span>
-      <article class="works">
-        <div class="grid">
-          <div class="grid-item">
-            <div class="card">
-              <img class="card-img " src="./image/Screenshot.png" alt="screenshot" />
-              <ul class="card-content">
-                <p class="card-header">Multi-Post Stories Gain+Glory</p>
-                <li class="card-tags">Ruby on rails</li>
-                <li class="card-tags">css</li>
-                <li class="card-tags">Javascript</li>
-                <li class="card-tags">html</li>
-                <button class="card-btn">See Projects</button>
+      <article class="recent">
+        <h2 class="works-header">My Recent Works</h2>
+        <span class="line"></span>
+        <article class="works">
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                  <button class="see-projects content-btn">See Project</button>
+                </ul>
               </div>
             </div>
           </div>
-        <div class="grid">
-          <div class="grid-item">
-            <div class="card">
-              <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-              <ul class="card-content">
-                <p class="card-header">Multi-Post Stories Gain+Glory</p>
-                <li class="card-tags">Ruby on rails</li>
-                <li class="card-tags">css</li>
-                <li class="card-tags">Javascript</li>
-                <li class="card-tags">html</li>
-                <button class="card-btn">See Project</button>
-              </ul>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                  <button class="see-projects content-btn">See Project</button>
+                </ul>
               </div>
             </div>
           </div>
-        </div>
-        <div class="grid">
-          <div class="grid-item">
-            <div class="card">
-              <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
-              <ul class="card-content">
-                <p class="card-header">Multi-Post Stories Gain+Glory</p>
-                <li class="card-tags">Ruby on rails</li>
-                <li class="card-tags">css</li>
-                <li class="card-tags">Javascript</li>
-                <li class="card-tags">html</li>
-                <button class="card-btn">See Projects</button>
-              </ul>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                  <button class="see-projects content-btn">See Projects</button>
+                </ul>
+              </div>
             </div>
           </div>
+        </article>
       </article>
-    </article>
+      <section class="about">
+        <h1 class="about-header">About Me</h1>
+        <p class="about-text">
+          I can help you build a product,feature or website Look through some of my work and
+          experience! If you like what you see and have a project you need coded,dont hestiate to
+          contact me
+        </p>
+        <button-type class="about-btn">Get My Resume</button-type>
+        <div class="about2"></div>
 
-    <section class="about">
-      <h1 class="about-header">About Me</h1>
-      <p class="about-text">
-        I can help you build a product,feature or website Look through some of my work and
-        experience! If you like what you see and have a project you need coded,dont hestiate to
-        contact me
-      </p>
-      <button-type class="about-btn">Get My Resume</button-type>
-      <div class="about2"></div>
-      <section class="flex-container">
-        <div class="flex-box margin-left-right-auto">
-              <p class="attribute-ellip">
-                <img class="attribute-img" src="./image/language.svg" alt="lang" />
-              </p>
+        <section class="flex-container">
+          <div class="flex-box margin-left-right-auto">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/language.svg" alt="lang" />
+            </p>
 
-              <ul class="attribute-title">Language</ul>
-              <li class="attribute-tags">Javascript</li>
-              <li class="attribute-tags">Ruby</li>
-              <li class="attribute-tags">Html</li>
-              <li class="attribute-tags">Css</li>
-          </ul>
-        </div>
+            <ul class="attribute-title">
+              Language
+            </ul>
+            <li class="attribute-tags">Javascript</li>
+            <li class="attribute-tags">Ruby</li>
+            <li class="attribute-tags">Html</li>
+            <li class="attribute-tags">Css</li>
+          </div>
+        </section>
+
         <section class="flex-container">
           <div class="flex-box">
-                <p class="attribute-ellip">
-                  <img class="attribute-img" src="./image/framework.svg" alt="framework" />
-                </p>
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/framework.svg" alt="framework" />
+            </p>
 
-                <ul class="attribute-title">Framework</ul>
-                <li class="attribute-tags">Bootstrap</li>
-                <li class="attribute-tags">Ruby on rails</li>
-                <li class="attribute-tags">RSpec</li>
-                <li class="attribute-tags">Capybara</li>
-                <li class="attribute-tags">Selenium</li>
+            <ul class="attribute-title">
+              Framework
             </ul>
+            <li class="attribute-tags">Bootstrap</li>
+            <li class="attribute-tags">Ruby on rails</li>
+            <li class="attribute-tags">RSpec</li>
+            <li class="attribute-tags">Capybara</li>
+            <li class="attribute-tags">Selenium</li>
           </div>
         </section>
         <section class="flex-container">
           <div class="flex-box">
-                <p class="attribute-ellip">
-                  <img class="attribute-img" src="./image/skill.svg" alt="skill" />
-                </p>
-
-                <ul class="attribute-title">Skills</ul>
-                <li class="attribute-tags">Codekit</li>
-                <li class="attribute-tags">Github</li>
-                <li class="attribute-tags">Codepen</li>
-                <li class="attribute-tags">Gitlab</li>
-                <li class="attribute-tags">Terminal</li>
-             </ul>
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+            </p>
+            <ul class="attribute-title">
+              Skills
+            </ul>
+            <li class="attribute-tags">Codekit</li>
+            <li class="attribute-tags">Github</li>
+            <li class="attribute-tags">Codepen</li>
+            <li class="attribute-tags">Gitlab</li>
+            <li class="attribute-tags">Terminal</li>
           </div>
         </section>
       </section>
-    </section>
     </main>
   </body>
 </html>
