--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  <button class="see-projects content-btn">See Project</button>
+                  <button-type name="button " class="see-projects content-btn"
+                    >See Project</button-type
+                  >
                 </ul>
               </div>
             </div>
@@ -143,7 +145,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  <button class="see-projects content-btn">See Project</button>
+                  <button-type name="button " class="see-projects content-btn"
+                    >See Project</button-type
+                  >
                 </ul>
               </div>
             </div>
@@ -158,7 +162,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  <button class="see-projects content-btn">See Projects</button>
+                  <button-type name="button " class="see-projects content-btn"
+                    >See Project</button-type
+                  >
                 </ul>
               </div>
             </div>
