--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
+                  </ul>
                   <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type
-                  >
-                </ul>
+                    >See Project</button-type>
               </div>
             </div>
           </div>
@@ -145,10 +144,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
+                  </ul>
                   <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type
-                  >
-                </ul>
+                    >See Project</button-type>
               </div>
             </div>
           </div>
@@ -162,10 +160,9 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
+                  </ul>
                   <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type
-                  >
-                </ul>
+                    >See Project</button-type>
               </div>
             </div>
           </div>
@@ -181,19 +178,18 @@
         <button-type class="about-btn">Get My Resume</button-type>
         <div class="about2"></div>
 
-        <section class="flex-container">
-          <div class="flex-box margin-left-right-auto">
+        <section class="flex-container margin-left-right-auto">
+         <div class="flex-box">
             <p class="attribute-ellip">
               <img class="attribute-img" src="./image/language.svg" alt="lang" />
             </p>
-
-            <ul class="attribute-title">
-              Language
-            </ul>
-            <li class="attribute-tags">Javascript</li>
+            <h4 class="attribute-title">Language</h4>
+            <ul class="attri-content">
+              <li class="attribute-tags">Javascript</li>
             <li class="attribute-tags">Ruby</li>
             <li class="attribute-tags">Html</li>
             <li class="attribute-tags">Css</li>
+            </ul>
           </div>
         </section>
 
@@ -202,30 +198,30 @@
             <p class="attribute-ellip">
               <img class="attribute-img" src="./image/framework.svg" alt="framework" />
             </p>
-
-            <ul class="attribute-title">
-              Framework
-            </ul>
+            <h4 class="attribute-title">Framework</h4>
+            <ul class="attri-content">
             <li class="attribute-tags">Bootstrap</li>
-            <li class="attribute-tags">Ruby on rails</li>
+            <li class="attribute-tags">Ruby</li>
             <li class="attribute-tags">RSpec</li>
             <li class="attribute-tags">Capybara</li>
             <li class="attribute-tags">Selenium</li>
+            </ul>
           </div>
         </section>
+
         <section class="flex-container">
           <div class="flex-box">
             <p class="attribute-ellip">
               <img class="attribute-img" src="./image/skill.svg" alt="skill" />
             </p>
-            <ul class="attribute-title">
-              Skills
-            </ul>
-            <li class="attribute-tags">Codekit</li>
+            <h4 class="attribute-title">Skills</h4>
+            <ul class="attri-content">
+             <li class="attribute-tags">Codekit</li>
             <li class="attribute-tags">Github</li>
             <li class="attribute-tags">Codepen</li>
             <li class="attribute-tags">Gitlab</li>
             <li class="attribute-tags">Terminal</li>
+            </ul>
           </div>
         </section>
       </section>
