--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  </ul>
-                  <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
               </div>
             </div>
           </div>
@@ -144,9 +145,10 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  </ul>
-                  <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
               </div>
             </div>
           </div>
@@ -160,9 +162,10 @@
                   <li class="content-tags">css</li>
                   <li class="content-tags">Javascript</li>
                   <li class="content-tags">html</li>
-                  </ul>
-                  <button-type name="button " class="see-projects content-btn"
-                    >See Project</button-type>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
               </div>
             </div>
           </div>
@@ -179,16 +182,16 @@
         <div class="about2"></div>
 
         <section class="flex-container margin-left-right-auto">
-         <div class="flex-box">
+          <div class="flex-box">
             <p class="attribute-ellip">
               <img class="attribute-img" src="./image/language.svg" alt="lang" />
             </p>
             <h4 class="attribute-title">Language</h4>
             <ul class="attri-content">
               <li class="attribute-tags">Javascript</li>
-            <li class="attribute-tags">Ruby</li>
-            <li class="attribute-tags">Html</li>
-            <li class="attribute-tags">Css</li>
+              <li class="attribute-tags">Ruby</li>
+              <li class="attribute-tags">Html</li>
+              <li class="attribute-tags">Css</li>
             </ul>
           </div>
         </section>
@@ -200,11 +203,11 @@
             </p>
             <h4 class="attribute-title">Framework</h4>
             <ul class="attri-content">
-            <li class="attribute-tags">Bootstrap</li>
-            <li class="attribute-tags">Ruby</li>
-            <li class="attribute-tags">RSpec</li>
-            <li class="attribute-tags">Capybara</li>
-            <li class="attribute-tags">Selenium</li>
+              <li class="attribute-tags">Bootstrap</li>
+              <li class="attribute-tags">Ruby</li>
+              <li class="attribute-tags">RSpec</li>
+              <li class="attribute-tags">Capybara</li>
+              <li class="attribute-tags">Selenium</li>
             </ul>
           </div>
         </section>
@@ -216,11 +219,11 @@
             </p>
             <h4 class="attribute-title">Skills</h4>
             <ul class="attri-content">
-             <li class="attribute-tags">Codekit</li>
-            <li class="attribute-tags">Github</li>
-            <li class="attribute-tags">Codepen</li>
-            <li class="attribute-tags">Gitlab</li>
-            <li class="attribute-tags">Terminal</li>
+              <li class="attribute-tags">Codekit</li>
+              <li class="attribute-tags">Github</li>
+              <li class="attribute-tags">Codepen</li>
+              <li class="attribute-tags">Gitlab</li>
+              <li class="attribute-tags">Terminal</li>
             </ul>
           </div>
         </section>
