--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     /></svg
                 ></a>
               </div>
-
               <div class="icon whatsapp">
                 <a href="https://wa.me/2347013729933">
                   <svg
@@ -114,6 +113,120 @@
             </li>
           </ul>
         </footer>
+      </section>
+      <article class="recent">
+        <h2 class="works-header">My Recent Works</h2>
+        <span class="line"></span>
+        <article class="works">
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
+              </div>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
+              </div>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="grid-item">
+              <div class="card">
+                <img class="card-img" src="./image/Screenshot.png" alt="screenshot" />
+                <h4 class="card-header">Multi-Post Stories Gain+Glory</h4>
+                <ul class="card-content margin-left-right-auto">
+                  <li class="content-tags">Ruby on rails</li>
+                  <li class="content-tags">css</li>
+                  <li class="content-tags">Javascript</li>
+                  <li class="content-tags">html</li>
+                </ul>
+                <button-type name="button " class="see-projects content-btn"
+                  >See Project</button-type
+                >
+              </div>
+            </div>
+          </div>
+        </article>
+      </article>
+      <section class="about">
+        <h1 class="about-header">About Me</h1>
+        <p class="about-text">
+          I can help you build a product,feature or website Look through some of my work and
+          experience! If you like what you see and have a project you need coded,dont hestiate to
+          contact me
+        </p>
+        <button-type class="about-btn">Get My Resume</button-type>
+        <div class="about2"></div>
+
+        <section class="flex-container margin-left-right-auto">
+          <div class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/language.svg" alt="lang" />
+            </p>
+            <h4 class="attribute-title">Language</h4>
+            <ul class="attri-content">
+              <li class="attribute-tags">Javascript</li>
+              <li class="attribute-tags">Ruby</li>
+              <li class="attribute-tags">Html</li>
+              <li class="attribute-tags">Css</li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="flex-container">
+          <div class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/framework.svg" alt="framework" />
+            </p>
+            <h4 class="attribute-title">Framework</h4>
+            <ul class="attri-content">
+              <li class="attribute-tags">Bootstrap</li>
+              <li class="attribute-tags">Ruby</li>
+              <li class="attribute-tags">RSpec</li>
+              <li class="attribute-tags">Capybara</li>
+              <li class="attribute-tags">Selenium</li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="flex-container">
+          <div class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+            </p>
+            <h4 class="attribute-title">Skills</h4>
+            <ul class="attri-content">
+              <li class="attribute-tags">Codekit</li>
+              <li class="attribute-tags">Github</li>
+              <li class="attribute-tags">Codepen</li>
+              <li class="attribute-tags">Gitlab</li>
+              <li class="attribute-tags">Terminal</li>
+            </ul>
+          </div>
+        </section>
       </section>
     </main>
   </body>
