adding contact content

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
           <div class="contact-img"></div>
 
           <footer class="intro-section margin-left-right-auto">
-            <ul class="socials-list">
-              <li class="socials-lists-item margin-left-right-auto">
+            <ul class="socials-list after">
+              <li class="socials-lists-item-after margin-left-right-auto">
                 <div class="icon github">
                   <a href="https://github.com/ibukun53/"
                     ><svg
@@ -341,6 +341,10 @@
                 </div>
               </li>
             </ul>
+            <p>
+              <b><a href="" target="_blank">debbyblessing1234@gmail.com</a></b>
+            </p>
+            <span class="line2"></span>
           </footer>
         </form>
       </section>
